--- a/IDontTrustYou.csproj
+++ b/IDontTrustYou.csproj
@@ -7,11 +7,13 @@
     <ProjectGuid>{F9086435-4BC0-48AC-B0EE-E2A345DE53C4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IDontTrustYou</RootNamespace>
+    <RootNamespace>KitchenIDontTrustYou</RootNamespace>
     <AssemblyName>IDontTrustYou</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'WORKSHOP|AnyCPU'">
     <OutputPath>bin\WORKSHOP\</OutputPath>
@@ -116,17 +118,31 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BlockCrateTakeFromHolder.cs" />
-    <Compile Include="DisableTakeFromHolderInFranchise.cs" />
-    <Compile Include="NewLockScrapper.cs" />
+    <Compile Include="LockScrapperDetector.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="NewToggleFranchiseSelector.cs" />
-    <Compile Include="NewTriggerWorkshopCrafting.cs" />
+    <Compile Include="PatchController.cs" />
+    <Compile Include="Patches\LockScrapper_Patch.cs" />
+    <Compile Include="Patches\ToggleFranchiseSelector_Patch.cs" />
+    <Compile Include="Patches\TakeFromHolder_Patch.cs" />
+    <Compile Include="Patches\TriggerWorkshopCrafting_Patch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Patches\UpdateTakesDuration_Patch.cs" />
+    <Compile Include="Extensions\Vector3Extensions.cs" />
+    <Compile Include="UnstuckPlayers.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /Y "$(TargetDir)$(TargetName).dll" "$(TargetDir)..\..\WorkshopFolder\content\" /i</PostBuildEvent>
   </PropertyGroup>
+  <Import Project="packages\Yariazen.PlateUp.ModBuildUtilities.1.11.5\build\Yariazen.PlateUp.ModBuildUtilities.targets" Condition="Exists('packages\Yariazen.PlateUp.ModBuildUtilities.1.11.5\build\Yariazen.PlateUp.ModBuildUtilities.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\Yariazen.PlateUp.ModBuildUtilities.1.11.5\build\Yariazen.PlateUp.ModBuildUtilities.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Yariazen.PlateUp.ModBuildUtilities.1.11.5\build\Yariazen.PlateUp.ModBuildUtilities.targets'))" />
+  </Target>
 </Project>
